mobile navigation moved to the bottom; hamburger with categories removed

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -171,6 +171,7 @@ footer {
 
         menu {
             margin-bottom: 0;
+            margin-top: 0;
         }
 
         .body-content {
@@ -180,5 +181,9 @@ footer {
         .sidebar-md-sm-hide {
             display: none;
         }
+    }
+
+    footer {
+        margin-top: -40px;
     }
 }
