--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -23,6 +23,6 @@
             ({{basketNum}})
         </i>&nbsp;&nbsp;Basket
     </a>
-    <a routerLink="history" routerLinkActive="menu-active" class="navbar-brand"><i class="fa fa-list"></i>&nbsp;&nbsp;History</a>
+    <a routerLink="history" routerLinkActive="menu-active" class="navbar-brand"><i class="far fa-clock"></i>&nbsp;&nbsp;History</a>
 </nav>
 
