--- a/src/app/menu/menu.component.less
+++ b/src/app/menu/menu.component.less
@@ -76,9 +76,10 @@ nav {
     nav {
         width: 100vw;
         position: absolute;
-        top: 0;
+        bottom: 0;
         position: fixed;
         z-index: 2;
+        height: 50px;
 
         a {
             line-height: 0;
@@ -96,10 +97,6 @@ nav {
             &:hover {
                 border-bottom: none;
             }
-        }
-
-        .navbar-hamburger {
-            display: block;
         }
 
         .show-sidemenu {
