--- a/src/styles.less
+++ b/src/styles.less
@@ -10,3 +10,11 @@ body {
 body, body .p-component {
     font-family: "Roboto",sans-serif;
 }
+
+
+@media screen and (max-width: 576px) {
+
+    body {
+        padding-bottom: 50px;
+    }
+}
