--- a/src/app/history/history.component.less
+++ b/src/app/history/history.component.less
@@ -17,9 +17,12 @@ h2 {
 
 .basket-item {
     border-top: 1px solid #ddd;
-    height: 110px;
     padding: 10px;
     margin: 10px;
+
+    .item-row {
+        align-items: center;
+    }
 
     &:last-child {
         border-bottom: 1px solid #ddd;
@@ -119,6 +122,10 @@ h2 {
     }
 
     .basket-item {
+
+        padding: 0;
+        margin: 10px 0;
+
         .col-xs-2 {
             position: relative;
             width: 100%;
@@ -152,6 +159,9 @@ h2 {
     }
 
     .basket-item {
+        padding: 0;
+        margin: 10px 0;
+
         .col-xs-2 {
             position: relative;
             width: 100%;
