--- a/src/app/menu/menu.component.less
+++ b/src/app/menu/menu.component.less
@@ -75,9 +75,9 @@ nav {
 
     nav {
         width: 100vw;
-        position: absolute;
         bottom: 0;
         position: fixed;
+        overflow: hidden;
         z-index: 2;
         height: 50px;
 
