--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,19 +1,17 @@
 
 <div *ngIf="isUserLogged" class="user-logged row">
     <div class="col-3">
-        <span>First Name:</span>
-        <span>Last Name:</span>
+        <span>Name:</span>
         <span>Email:</span>
     </div>
     <div class="col-9">
-        <span>{{currentUser.firstName}}</span>
-        <span>{{currentUser.lastName}}</span>
+        <span>{{currentUser.firstName}} {{currentUser.lastName}}</span>
         <span>{{currentUser.email}}</span>
     </div>
     <button class="logout-btn"><logout (click)="logout()"></logout></button>
 </div>
 
-<div *ngIf="!isUserLogged" class="row">
+<div *ngIf="!isUserLogged" class="row" style="max-width:100%;">
     <div class="col sign-in">
         <h2>Sign In</h2>
         <div *ngIf="isLoginError" class="red-text">Incorrect Email or Password</div>
