--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -16,18 +16,18 @@
             <div *ngFor="let purchases of history">
                 <p-accordionTab header="Purchase on date: {{purchases.datePayed | date: 'd/MM/yyyy'}} ({{purchases.datePayed | date: 'H:mm'}})">
                     <div class="basket-item" *ngFor="let purchase of purchases.items">
-                        <div class="row">
-                            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                        <div class="row item-row">
+                            <div class="col-2">
                                 <a [routerLink]="['/books', purchase.bookId]"><img src="{{siteName}}{{purchase.image}}" class="book-img" /></a>
                             </div>
-                            <div class="col-xl-5 col-lg-5 col-md-5 col-sm-4 col-xs-4">
+                            <div class="col-5">
                                 <a [routerLink]="['/books', purchase.bookId]"><span class="book-title">{{purchase.title}}</span></a>
                                 <span class="book-author">{{purchase.authorLastName}}, {{purchase.authorFirstName}}</span>
                             </div>
-                            <div class="col-xl-1 col-lg-1 col-md-1 col-sm-2 col-xs-2">
+                            <div class="col-2">
                                 <span>{{purchase.count}}</span>
                             </div>
-                            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                            <div class="col-3">
                                 <span *ngIf="purchase.discount" class="book-price">{{purchase.discount * purchase.count | currency:'EUR'}}</span><br />
                                 <span class="book-price" [ngClass]="{'discount': purchase.discount}">{{purchase.price * purchase.count | currency:'EUR'}}</span>
                             </div>
