--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,9 +29,9 @@
 
 <footer>
     <div class="footer-body">
-        <a href=""><i class="fab fa-facebook"></i></a>
-        <a href=""><i class="fab fa-youtube"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
+        <a><i class="fab fa-facebook"></i></a>
+        <a><i class="fab fa-youtube"></i></a>
+        <a><i class="fab fa-twitter"></i></a>
         <p>&copy; 2020 Klara Lukin. All Rights Reserved.</p>
     </div>
 </footer>
