--- a/src/app/create-account/create-account.component.less
+++ b/src/app/create-account/create-account.component.less
@@ -10,4 +10,9 @@
         margin-bottom: 15px;
         width: 200px;
     }
+
+    button {
+        width: 200px;
+        margin: 10px 0;
+    }
 }
